[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waylay-sdk-rules"
version = "6.5.0.20240802"
description = "Waylay rules engine"
authors = [
    { name = "Waylay", email = "info@waylay.io"}
]
keywords = ["Waylay rules engine"]
requires-python = ">= 3.9"
dependencies = [
    "waylay-sdk-core ~= 0.2.3",
    "pydantic ~= 2.6",
    "typing-extensions ~= 4.10",
    "eval-type-backport ~= 0.1.3; python_version < '3.10'",
]
readme = "README.md"
license={file = "LICENSE.txt"}

[project.urls]
Homepage = "https://www.waylay.io/"
Documentation = "https://docs.waylay.io/#/api/?id=software-development-kits"
Repository = "https://github.com/waylayio/waylay-sdk-rules-py.git"
"Openapi Specification" = "https://docs.waylay.io/openapi/public/redocly/rules.html"

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "types-python-jose",
    "types-appdirs",
    "types-python-dateutil",
    "pytest",
    "pytest-mock",
    "pytest-httpx",
    "pytest-asyncio",
    "starlette",
    "python-multipart",
    "typeguard",
    "pyyaml",
    "jsf >= 0.11.1",
]

types = ["waylay-sdk-rules-types"]

[project.entry-points.dynamic]
"waylay_sdk_plugins"= "waylay.services.rules.service:PLUGINS"

[tool.setuptools.packages.find]
where = ["src/"]
namespaces = true

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
# allow duplicate imports
ignore=["F811"]
# https://docs.astral.sh/ruff/rules
select= [
    "UP007", "FA102",  # convert Union to | (pep-604)
    "I001", "F401",  # sort and remove unused imports
    "PIE790",  # remove unnecessary pass statements
    "E303",  # too many blank lines
]

[tool.ruff.lint.per-file-ignores]
# do not touch imports here
"__init__.py" = ["F401"]
"conftest.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"